Footer and scripts link

--- a/index.html
+++ b/index.html
@@ -20,11 +20,19 @@
             </ul>
         <div id="menu-toggle" onclick="toggleMenu()">☰</div>
     </nav>
+    <!------------ Header ----------------------->
 
 
 
 
+    <!------------ Footer ----------------------->
+    <footer>
+        <p>&copy; 2025 CGPA Calculator. All rights reserved.</p>
+    </footer>
 
+    <!-------------- Script (JS Files) ---------->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script src="assets/js/script.js"></script>
+    
   </body>
 </html>
