--- a/index.html
+++ b/index.html
@@ -21,18 +21,32 @@
         <div id="menu-toggle" onclick="toggleMenu()">☰</div>
     </nav>
     <!------------ Header ----------------------->
+    <header class="header-slider">
+      <div class="slider">
+        <div class="slide-track">
+          <div class="slide"><img src="Images/Front.png" alt="Slide 1"></div>
+          <div class="slide"><img src="Images/Student.png" alt="Slide 2"></div>
+          <div class="slide"><img src="Images/Gap.png" alt="Slide 3"></div>
 
+          <!-- Duplicate images for smooth loop -->
+          <div class="slide"><img src="Images/camp.png" alt="Slide 1 duplicate"></div>
+          <div class="slide"><img src="Images/Front.png" alt="Slide 2 duplicate"></div>
+          <div class="slide"><img src="Images/Student.png" alt="Slide 2 duplicate"></div>
+          <div class="slide"><img src="Images/Gap.png" alt="Slide 3 duplicate"></div>
+        </div>
+      </div>
+    </header>
 
 
 
     <!------------ Footer ----------------------->
     <footer>
-        <p>&copy; 2025 CGPA Calculator. All rights reserved.</p>
+        <p>&copy; 2025 CGPA Calculator by Vinay. All rights reserved.</p>
     </footer>
 
     <!-------------- Script (JS Files) ---------->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
-    
+
   </body>
 </html>
