--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
     <header class="header-slider">
       <div class="slider">
         <div class="slide-track">
-          <div class="slide"><img src="Images/Front.png" alt="Slide 1"></div>
-          <div class="slide"><img src="Images/Student.png" alt="Slide 2"></div>
-          <div class="slide"><img src="Images/Gap.png" alt="Slide 3"></div>
+          <div class="slide"><img src="assets/Images/Front.png" alt="Slide 1"></div>
+          <div class="slide"><img src="assets/Images/Student.png" alt="Slide 2"></div>
+          <div class="slide"><img src="assets/Images/Gap.png" alt="Slide 3"></div>
 
           <!-- Duplicate images for smooth loop -->
-          <div class="slide"><img src="Images/camp.png" alt="Slide 1 duplicate"></div>
-          <div class="slide"><img src="Images/Front.png" alt="Slide 2 duplicate"></div>
-          <div class="slide"><img src="Images/Student.png" alt="Slide 2 duplicate"></div>
-          <div class="slide"><img src="Images/Gap.png" alt="Slide 3 duplicate"></div>
+          <div class="slide"><img src="assets/Images/camp.png" alt="Slide 1 duplicate"></div>
+          <div class="slide"><img src="assets/Images/Front.png" alt="Slide 2 duplicate"></div>
+          <div class="slide"><img src="assets/Images/Student.png" alt="Slide 2 duplicate"></div>
+          <div class="slide"><img src="assets/Images/Gap.png" alt="Slide 3 duplicate"></div>
         </div>
       </div>
     </header>
