--- a/index.html
+++ b/index.html
@@ -37,6 +37,39 @@
       </div>
     </header>
 
+    <!------------ Main Section ----------------->
+    <main>
+      <!-------- Home section ---------->
+      <section id="home">
+        <div class="home-content fade-in">
+          <h1>🎓 Welcome to CGPA Calculator</h1>
+
+          <p class="delay-1">
+            📊 <strong>Calculate your college GPA/CGPA</strong> quickly and accurately with our easy-to-use tool. 
+            This calculator helps you keep track of your <strong>academic performance</strong> semester-wise.
+          </p>
+
+          <p class="delay-2">
+            🎯 Whether you're a <em>university student</em> tracking your semester grades or a <em>school student</em> calculating your GPA,
+            our tool supports a wide range of academic systems. Just <strong>enter your subjects and grade points</strong>,
+            and we'll do the rest — <span style="color:green;">instantly and precisely</span>.
+          </p>
+
+          <p class="delay-3">
+            💡 Understanding your academic progress is crucial. Our CGPA Calculator not only <strong>saves your time</strong>,
+            but also gives you <span style="color:#007BFF;">clarity on where you stand</span> — so you can set better goals and improve your performance.
+          </p>
+
+          <p class="delay-4">
+            ⚙️ Built for <strong>simplicity, accuracy, and speed</strong> — this calculator works seamlessly on <em>desktop and mobile</em>,
+            so you can access it <strong>anytime, anywhere</strong>.  
+            <br><br>
+            🚀 <a href="calc.html"><strong>Start calculating now</strong></a> and take control of your academic future!
+          </p>
+        </div>
+      </section>
+    </main>
+
 
 
     <!------------ Footer ----------------------->
