--- a/index.html
+++ b/index.html
@@ -68,6 +68,24 @@
           </p>
         </div>
       </section>
+
+      <!--------- AboutSection ------->
+      <section id="about" class="about-section">
+        <div class="about-container">
+            <h2>About CGPA Calculator</h2>
+
+            <div class="about-grid">
+              <div class="about-image">
+                  <img src="Images/cgpa.png" alt="About CGPA Calculator">
+              </div>
+              <div class="about-content">
+                  <p>Our CGPA Calculator is designed to help students accurately calculate their academic performance with ease. Whether you're a college or university student, this tool ensures you get the correct GPA/CGPA based on your grades and credits.</p>
+                  <p>With a clean interface and responsive design, it's built for both mobile and desktop users. No more confusing spreadsheets or manual formulas — simply input your grades and let the calculator handle the rest.</p>
+                  <p>Our goal is to make academic tracking simple, transparent, and accessible to every student. Take control of your academic journey with precision and confidence.</p>
+              </div>
+            </div>
+        </div>
+      </section>
     </main>
 
 
