--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
             <div class="about-grid">
               <div class="about-image">
-                  <img src="Images/cgpa.png" alt="About CGPA Calculator">
+                  <img src="assets/Images/cgpa.png" alt="About CGPA Calculator">
               </div>
               <div class="about-content">
                   <p>Our CGPA Calculator is designed to help students accurately calculate their academic performance with ease. Whether you're a college or university student, this tool ensures you get the correct GPA/CGPA based on your grades and credits.</p>
