--- a/calc.html
+++ b/calc.html
@@ -59,7 +59,55 @@
         </div>
 
         <!-- Grading System Table -->
-        
+        <div class="grading-system">
+          <h2>Grading System</h2>
+          <table>
+            <tr>
+              <th>Level</th>
+              <th>Outstanding</th>
+              <th>Excellent</th>
+              <th>Very Good</th>
+              <th>Good</th>
+              <th>Above Average</th>
+              <th>Average</th>
+              <th>Poor</th>
+              <th>Fail</th>
+            </tr>
+            <tr>
+              <td>Letter Grade</td>
+              <td>A+</td>
+              <td>A</td>
+              <td>B+</td>
+              <td>B</td>
+              <td>C</td>
+              <td>D</td>
+              <td>E</td>
+              <td>F</td>
+            </tr>
+            <tr>
+              <td>Grade Point</td>
+              <td>10</td>
+              <td>9</td>
+              <td>8</td>
+              <td>7</td>
+              <td>6</td>
+              <td>5</td>
+              <td>4</td>
+              <td>00</td>
+            </tr>
+            <tr>
+              <td>Score (Marks Range)</td>
+              <td>&ge; 90</td>
+              <td>&lt; 90 &ge; 80</td>
+              <td>&lt; 80 &ge; 70</td>
+              <td>&lt; 70 &ge; 60</td>
+              <td>&lt; 60 &ge; 50</td>
+              <td>&lt; 50 &ge; 45</td>
+              <td>&lt; 45 &ge; 40</td>
+              <td>&lt; 40</td>
+            </tr>
+          </table>
+        </div>
       </section>
 
 
