--- a/calc.html
+++ b/calc.html
@@ -104,9 +104,9 @@
         </div>
 
         <!-- Grading System Table -->
-        <div class="grading-system">
+        <div >
           <h2>Grading System</h2>
-          <table>
+          <table class="grading-system">
             <tr>
               <th>Level</th>
               <th>Outstanding</th>
