--- a/calc.html
+++ b/calc.html
@@ -52,7 +52,9 @@
         <div id="semesters-container"></div>
 
         <!-- Button -->
-        <button type="button" onclick="calculate()">Calculate</button>
+        <div class="button-wrapper">
+          <button type="button" onclick="calculate()">Calculate</button>
+        </div>
       </section>
 
       <!----------- Result ----------------->
