--- a/calc.html
+++ b/calc.html
@@ -66,9 +66,8 @@
           <div class="card-body">
             <p><b>Total Credit:</b> <span id="card-credit"></span></p>
             <p><b>Total Credit Point:</b> <span id="card-cp"></span></p>
-            <p><b>Final Result:</b> 
-              <span class="result-badge" id="card-value"></span>
-            </p>
+            <p><b>Final Result :</b> <span class="result-badge" id="card-value"></span></p>
+            <p><b>Percentage :</b> <span class="result-badge" id="card-value-percent"></span></p>
           </div>
         </div>
       </div>
