--- a/index.html
+++ b/index.html
@@ -97,12 +97,21 @@
             <hr>
             <input type="hidden" name="access_key" value="e660f081-b2bc-4c0f-9021-f69362367823">
 
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" id="email" name="email" placeholder="Your Gmail" required>
-            <p id="message" style="color: red;"></p>
-
-            <textarea name="message" rows="4" placeholder="Your Message" required></textarea>
-
+            <div class="form-group">
+              <label for="name">Name:</label>
+              <input type="text" id="name" name="name" placeholder="Name" class="contact__input" required aria-describedby="name-error">
+              <span id="name-error" class="error" style="display: none; color: red;">Please enter your name.</span>
+            </div>
+            <div class="form-group">
+              <label for="email">Email:</label>
+              <input type="email" id="email" name="email" placeholder="Email" class="contact__input" required aria-describedby="email-error">
+              <span id="email-error" class="error" style="display: none; color: red;">Please enter a valid Gmail address.</span>
+            </div>
+            <div class="form-group">
+              <label for="message">Message:</label>
+              <textarea id="message" name="message" placeholder="Your message" rows="2" class="contact__input" required aria-describedby="message-error"></textarea>
+              <span id="message-error" class="error" style="display: none; color: red;">Please enter a message.</span>
+            </div>
             <button type="submit">Submit</button>
           </form>
         </div>
